# morphine

./: .gitignore  README.md  docker-compose.yml
analytics/: Dockerfile  main.py  requirements.txt
analytics/frameworks/: __init__.py  moriarty.py  vibrio.py
analytics/services/: __init__.py  redis_service.py  stream_service.py
analytics/src/: gps_precision_engine.py  precision_vision_system.py
analytics/src/frameworks/: moriarty.py  vibrio.py
analytics/src/moriarty/: pose_analyzer.py
analytics/src/services/: redis_service.py  stream_service.py
analytics/src/vibrio/: detector.py  tracker.py
analytics/src/video/: ingestion.py
api/: Dockerfile  package.json
api/src/: app.js  index.js
api/src/routes/: analytics.js  annotation-models.js  auth.js  betting.js  brand-engagement.js  brand-predictions.js  brand-specialists.js  index.js  marketplace.js  social-viewing.js  streams.js  universal-predictions.js
api/src/services/: redis.js
api/src/utils/: logger.js
core/: Cargo.toml  Dockerfile
core/migrations/: 001_initial.sql
core/src/: config.rs  main.rs
core/src/betting/: engine.rs  mod.rs  types.rs
core/src/geolocation/: mod.rs
core/src/orchestrator/: metabolic.rs  mod.rs
core/src/reasoning/: mod.rs
core/src/state/: mod.rs
core/src/stream/: manager.rs  mod.rs  types.rs
core/src/websocket/: mod.rs
docs/: Gemfile  README.md  REVOLUTIONARY_ARCHITECTURE.md  _config.yml  api-reference.md  architecture.md  computer-vision.md  getting-started.md  index.md  micro-betting.md  moriarty.md  psychology.md  streaming-implementation.md  streaming.md  technologies.md  video-annotation.md
docs/_sass/: custom.scss
docs/laboratory/: izinyoka.md  spectacular.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/annotation-models/: page.tsx
frontend/app/components/: AnalyticsPanel.tsx  BettingInterface.tsx  ControlPanel.tsx  StreamDashboard.tsx
frontend/app/spectacular/precision-analysis/: page.tsx
frontend/app/universal-prediction/: page.tsx
frontend/lib/: api.ts
frontend/store/: useStore.ts
frontend/types/: index.ts
orchestrator/: Dockerfile  main.py  model_marketplace.py  requirements.txt  spectacular_integration.py  spectacular_morphine_bridge.py
scripts/: dev.sh  setup-dev.sh
