[package]
name = "morphine-core"
version = "1.0.0"
edition = "2021"
description = "Morphine Platform Core Service - High-performance stream management and state coordination"
authors = ["Morphine Platform"]
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and state
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# HTTP client for service communication
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics and health
prometheus = "0.13"

# Security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Concurrency
parking_lot = "0.12"
dashmap = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true 